--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "1.0.0",
   "author": "Kaleigh Scruggs <kaleighscruggs@gmail.com>",
   "dependencies": {
+    "axios": "^0.21.1",
     "gatsby": "^2.24.91",
     "gatsby-cli": "^2.12.113",
     "gatsby-image": "^2.3.1",
