--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kaleigh Scruggs <kaleighscruggs@gmail.com>",
   "dependencies": {
     "axios": "^0.21.1",
+    "caniuse-lite": "^1.0.30001690",
     "gatsby": "^2.24.91",
     "gatsby-cli": "^2.12.113",
     "gatsby-image": "^2.3.1",
