--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "sass": "^1.83.1"
   },
   "devDependencies": {
-    "prettier": "^3.4.2"
+    "prettier": "3.4.2"
   },
   "packageManager": "yarn@4.6.0"
 }
