--- a/package.json
+++ b/package.json
@@ -1,47 +1,52 @@
 {
   "name": "is-it-snowing-in-atlanta",
+  "version": "2.0.0",
   "private": true,
   "description": "this will let you know if there is actual snow in Atlanta",
-  "version": "1.0.0",
-  "author": "Kaleigh Scruggs <kaleighscruggs@gmail.com>",
-  "dependencies": {
-    "axios": "^0.21.1",
-    "gatsby": "^2.24.91",
-    "gatsby-cli": "^2.12.113",
-    "gatsby-image": "^2.3.1",
-    "gatsby-plugin-google-analytics": "^2.2.1",
-    "gatsby-plugin-manifest": "^2.4.37",
-    "gatsby-plugin-offline": "^3.2.38",
-    "gatsby-plugin-react-helmet": "^3.2.1",
-    "gatsby-plugin-sharp": "^2.6.43",
-    "gatsby-source-filesystem": "^2.3.37",
-    "gatsby-transformer-sharp": "^2.5.20",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1"
-  },
-  "devDependencies": {
-    "prettier": "^1.19.1"
-  },
   "keywords": [
     "gatsby"
   ],
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+  "bugs": {
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/gatsbyjs/gatsby-starter-default"
   },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+  "license": "MIT",
+  "author": "Kaleigh Scruggs <kaleighscruggs@gmail.com>",
+  "scripts": {
+    "build": "gatsby build",
+    "clean": "gatsby clean",
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "serve": "gatsby serve",
+    "start": "npm run develop",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+  },
+  "dependencies": {
+    "axios": "^1.7.9",
+    "gatsby": "^5.14.1",
+    "gatsby-adapter-netlify": "^1.2.0",
+    "gatsby-cli": "^5.14.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-google-analytics": "^5.14.0",
+    "gatsby-plugin-manifest": "^5.14.0",
+    "gatsby-plugin-offline": "^6.14.0",
+    "gatsby-plugin-react-helmet": "^6.14.0",
+    "gatsby-plugin-sass": "^6.14.0",
+    "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-source-filesystem": "^5.14.0",
+    "gatsby-transformer-sharp": "^5.14.0",
+    "node-addon-api": "^8.3.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "sass": "^1.83.1"
+  },
+  "devDependencies": {
+    "prettier": "3.4.2"
+  },
+  "packageManager": "yarn@4.6.0"
 }
