--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-cli": "^5.15.0",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-google-analytics": "^5.15.0",
+    "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-manifest": "^5.15.0",
     "gatsby-plugin-offline": "^6.15.0",
     "gatsby-plugin-react-helmet": "^6.15.0",
