--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,27 @@
 {
     "editor.formatOnSave": true,
-    "prettier.requireConfig": true,
-    "prettier.configPath": "./.prettierrc",
-    "prettier.ignorePath": "./.prettierignore",
-    "prettier.printWidth": 80,
-    "prettier.enableDebugLogs": true,
-    "prettier.resolveGlobalModules": true,
-    "prettier.prettierPath": ".yarn/unplugged/prettier-npm-3.4.2-c913ed3277/node_modules/prettier/"
+    "editor.formatOnSaveMode": "file",
+    "css.format.enable": true,
+    "[css]": {
+        "editor.suggest.insertMode": "replace"
+    },
+    "[json]": {
+        "editor.suggest.insertMode": "replace",
+        "editor.formatOnSave": true
+    },
+    "[javascript]": {
+        "editor.suggest.insertMode": "replace",
+        "editor.formatOnSave": true,
+        "editor.bracketPairColorization.enabled": true,
+        "editor.showUnused": true
+    },
+    "javascript.suggest.includeCompletionsForImportStatements": true,
+
+    // "prettier.requireConfig": true,
+    // "prettier.configPath": "./.prettierrc",
+    // "prettier.ignorePath": "./.prettierignore",
+    // "prettier.printWidth": 80,
+    // "prettier.enableDebugLogs": true,
+    // "prettier.resolveGlobalModules": true,
+    // "prettier.prettierPath": ".yarn/unplugged/prettier-npm-3.4.2-c913ed3277/node_modules/prettier/"
 }
