--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
   "scripts": {
     "build": "gatsby build",
     "clean": "gatsby clean",
-    "develop": "gatsby develop",
-    "dev": "netlify dev",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "serve": "gatsby serve",
-    "start": "npm run dev",
+    "start": "gatsby develop",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
@@ -30,7 +28,6 @@
     "gatsby": "^5.15.0",
     "gatsby-adapter-netlify": "^1.3.0",
     "gatsby-cli": "^5.15.0",
-    "gatsby-image": "^3.11.0",
     "gatsby-plugin-google-analytics": "^5.15.0",
     "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-manifest": "^5.15.0",
@@ -39,7 +36,6 @@
     "gatsby-plugin-sass": "^6.15.0",
     "gatsby-plugin-sharp": "^5.15.0",
     "gatsby-source-filesystem": "^5.15.0",
-    "gatsby-transformer-sharp": "^5.15.0",
     "node-addon-api": "^8.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
@@ -48,7 +44,6 @@
     "sass": "^1.97.3"
   },
   "devDependencies": {
-    "netlify-cli": "^23.13.5",
     "prettier": "3.8.1"
   },
   "packageManager": "yarn@4.12.0"
