--- a/.gitignore
+++ b/.gitignore
@@ -65,5 +65,8 @@ public
 yarn-error.log
 .pnp/
 .pnp.js
-# Yarn Integrity file
 .yarn-integrity
+.yarn/install-state.gz
+
+# Local Netlify folder
+.netlify
