--- a/package.json
+++ b/package.json
@@ -18,26 +18,24 @@
   "scripts": {
     "build": "gatsby build",
     "clean": "gatsby clean",
-    "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "serve": "gatsby serve",
-    "start": "npm run develop",
+    "start": "gatsby develop",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "axios": "^1.13.2",
-    "gatsby": "^5.15.0",
-    "gatsby-adapter-netlify": "^1.3.0",
-    "gatsby-cli": "^5.15.0",
-    "gatsby-image": "^3.11.0",
-    "gatsby-plugin-google-analytics": "^5.15.0",
-    "gatsby-plugin-manifest": "^5.15.0",
-    "gatsby-plugin-offline": "^6.15.0",
-    "gatsby-plugin-react-helmet": "^6.15.0",
-    "gatsby-plugin-sass": "^6.15.0",
-    "gatsby-plugin-sharp": "^5.15.0",
-    "gatsby-source-filesystem": "^5.15.0",
-    "gatsby-transformer-sharp": "^5.15.0",
+    "axios": "^1.13.4",
+    "gatsby": "^5.16.0",
+    "gatsby-adapter-netlify": "^1.4.0",
+    "gatsby-cli": "^5.16.0",
+    "gatsby-plugin-google-analytics": "^5.16.0",
+    "gatsby-plugin-gtag": "^1.0.13",
+    "gatsby-plugin-manifest": "^5.16.0",
+    "gatsby-plugin-offline": "^6.16.0",
+    "gatsby-plugin-react-helmet": "^6.16.0",
+    "gatsby-plugin-sass": "^6.16.0",
+    "gatsby-plugin-sharp": "^5.16.0",
+    "gatsby-source-filesystem": "^5.16.0",
     "node-addon-api": "^8.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
@@ -48,5 +46,5 @@
   "devDependencies": {
     "prettier": "3.8.1"
   },
-  "packageManager": "yarn@4.6.0"
+  "packageManager": "yarn@4.12.0"
 }
